<resources>
    <string name="app_name">WeatherReportApp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="added_into_bookmark"> is added into bookmark</string>
    <string name="no_location_found_on_map">Please increase zoom level to get exact location</string>
    <string name="internet_error">Please check internet connection</string>
    <string name="no_record_found">No bookmark available\n Please click on the + icon to add bookmark.</string>
    <string name="tirupati">Tirupati</string>
    <string name="details">View Details</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="sea_level">Sea Level</string>
    <string name="map">Map</string>
    <string name="fragment_city_details">City Weather Details</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="metric_system">Metric System :-</string>
    <string name="celsius">%1$.2f\u2103</string>
    <string name="fahrenheit">%1$.2f\u2109</string>
    <string name="km">%1$.2fkm/h</string>
    <string name="miles">%1$.2fMiles/h</string>
</resources>