<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.prashant.weatherreportapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/homeToMap"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/homeToCityDetails"
            app:destination="@id/cityDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.prashant.weatherreportapp.ui.setting.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_help"
        android:name="com.prashant.weatherreportapp.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.prashant.weatherreportapp.ui.map.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/cityDetailsFragment"
        android:name="com.prashant.weatherreportapp.ui.details.CityDetailsFragment"
        android:label="@string/fragment_city_details"
        tools:layout="@layout/city_details_fragment" />
</navigation>